Fix css for navBar Create authContextProvider and wrap it in the main file Use the new updateUser function and use it for authentication

--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -1,7 +1,6 @@
-@import "../../responsive.scss";
+@import '../../responsive.scss';
 
 nav {
-  height: 100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -63,12 +62,12 @@ nav {
       margin: 20px;
     }
 
-    .user{
+    .user {
       display: flex;
       align-items: center;
       font-weight: bold;
 
-      img{
+      img {
         width: 40px;
         height: 40px;
         border-radius: 50%;
@@ -76,20 +75,20 @@ nav {
         margin-right: 20px;
       }
 
-      span{
-        @include sm{
+      span {
+        @include sm {
           display: none;
         }
       }
 
-      .profile{
+      .profile {
         padding: 12px 24px;
         background-color: #fece51;
         cursor: pointer;
         border: none;
         position: relative;
-        
-        .notification{
+
+        .notification {
           position: absolute;
           top: -8px;
           right: -8px;
@@ -102,7 +101,6 @@ nav {
           align-items: center;
           justify-content: center;
         }
-
       }
     }
 
